# Colline

./: .gitignore  License.txt  README.md
code/: Agent.cpp  Agent.h  AgentCreator.h  CMakeLists.txt  Colline.aps  Colline.clw  Colline.cpp  Colline.dsp  Colline.dsw  Colline.h  Colline.ncb  Colline.opt  Colline.plg  Colline.rc  Colline.sln  Colline.vcxproj  Colline.vcxproj.filters  DecisionCategory.cpp  Effector.cpp  Environment.cpp  Environment.h  Fountain.cpp  Fountain.h  Grid.cpp  GridCell.h  GridRow.h  IdStamp.h  Inpoder.h  Konst.h  License.txt  Message.cpp  Observable.cpp  README.md  ReadMe.txt  StatisticsHandler.cpp  StatisticsHandler.h  StdAfx.cpp  StdAfx.h  SyncManager.cpp  SyncManager.h  (+11 more)
code/include/: Agent.h  AgentCreator.h  Colline.h  DecisionCategory.h  Effector.h  Environment.h  Fountain.h  Grid.h  GridCell.h  GridRow.h  Inpoder.h  Konst.h  Message.h  Observable.h  StatisticsHandler.h  SyncManager.h  UIntGrid.h  Utilities.h  WndColline.h  WndCollineText.h  dCollector.h
code/src/: Agent.cpp  AgentCreator.cpp  CMakeLists.txt  Colline.cpp  DecisionCategory.cpp  Effector.cpp  Environment.cpp  Fountain.cpp  Grid.cpp  GridCell.cpp  GridRow.cpp  IdStamp.cpp  Inpoder.cpp  Message.cpp  Observable.cpp  StatisticsHandler.cpp  SyncManager.cpp  UIntGrid.cpp  Utilities.cpp  WndColline.cpp  WndCollineText.cpp  dCollector.cpp
code/test/: CMakeLists.txt  GridTest.cpp
